styling corrected to remove white space

--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -3,7 +3,7 @@
     object-fit: cover;
 }
 .home-main{
-    margin-top: 15rem;
+    padding-top: 15rem;
     padding-left: 12vw;
     padding-right: 12vw;
     padding-bottom: 10rem;
